--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "realrashid/sweet-alert": "^6.0",
         "yajra/laravel-datatables": "^1.0"
     },
     "require-dev": {
